--- a/views/index.html
+++ b/views/index.html
@@ -41,17 +41,16 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-16 text-center">
-                    <h2 class="brand-before">
+                    <!-- <h2 class="brand-before">
                         <small>Welcome to</small>
-
-                    </h2>
+                    </h2> -->
                     <h1 class="brand-name">空氣品質與區域氣候研究室</h1>
-                    <hr class="tagline-divider">
+                    <!-- <hr class="tagline-divider">
                         <h2>
                             <small>
                                 <strong>環境變遷研究中心</strong>
                             </small>
-                        </h2>
+                        </h2> -->
                 </div>
             </div>
         </div>
@@ -75,7 +74,7 @@
                         <a href="/">目前天氣</a>
                     </li>
                     <li>
-                        <a href="http://www.rcec.sinica.edu.tw/~cylin/lab/ws-series.htm">風速溫度雨量時序圖</a>
+                        <a href="/WRT">風速溫度雨量時序圖</a>
                     </li>
                     <li>
                         <a href="http://www.rcec.sinica.edu.tw/~cylin/lab/real-time-simulation.htm">WRF氣象場</a>
@@ -94,9 +93,10 @@
         <!-- /.container -->
     </nav>
 
+
     
 
-         <div class="row">
+        <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
@@ -105,12 +105,12 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-sm-6 text-center">
-                    <img class="img-rounded center-block" src="http://www.rcec.sinica.edu.tw/WRF/satellite/s3p.jpg" width="350" height="400" alt="Responsive image">
+                <div class="col-sm-4 text-center">
+                    <img class="img-rounded center-block" src="http://www.rcec.sinica.edu.tw/WRF/satellite/s3p.jpg" width="350" height="350" alt="Responsive image">
                     <h3>衛星雲圖</h3>
                 </div>
-                <div class="col-sm-6 text-center">
-                    <img class="img-rounded center-block" src="http://www.rcec.sinica.edu.tw/WRF/rain/rain.jpg" alt="">
+                <div class="col-sm-4 text-center">
+                    <img class="img-rounded center-block" src="http://www.rcec.sinica.edu.tw/WRF/rain/rain.jpg" width="350" height="350" alt="">
                     <h3>累積降雨</h3>
                 </div>
                 <div class="col-sm-4 text-center">
@@ -133,9 +133,17 @@
                        
                     </h3>
                 </div>
+                <div class="col-sm-4 text-center">
+                    <a href="http://www.rcec.sinica.edu.tw/WRF/N/mm5_mon_1_12.2016.htm">
+                        <img class="img-responsive" src="public/stylesheets/img/domain1.png" alt="Responsive image" width="800" height="800" alt="">
+                    </a>
+                    <h3>WRF氣象場-亞洲區
+                    </h3>
+                </div>
                 <div class="clearfix"></div>
             </div>
         </div>
+    </div>
 
     
     <!-- /.container -->
