--- a/views/about.html
+++ b/views/about.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Business Casual - Start Bootstrap Theme</title>
+    <title>中研院環變中心 - 空氣品質與區域氣候研究室</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/stylesheets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="public/stylesheets/css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -32,10 +32,25 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
-
     <!-- Navigation -->
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-16 text-center">
+                    <!-- <h2 class="brand-before">
+                        <small>Welcome to</small>
+                    </h2> -->
+                    <h1 class="brand-name">空氣品質與區域氣候研究室</h1>
+                    <!-- <hr class="tagline-divider">
+                        <h2>
+                            <small>
+                                <strong>環境變遷研究中心</strong>
+                            </small>
+                        </h2> -->
+                </div>
+            </div>
+        </div>
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -53,16 +68,20 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="/">目前天氣</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="http://www.rcec.sinica.edu.tw/~cylin/lab/ws-series.htm">風速溫度雨量時序圖</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="http://www.rcec.sinica.edu.tw/~cylin/lab/real-time-simulation.htm">WRF氣象場</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="http://www.rcec.sinica.edu.tw/WRF/N/qv.wd.htm">模擬實驗</a>
+                    </li>
+                    <li>
+                        <a href="http://www.rcec.sinica.edu.tw/WRF/N/qv.wd.htm">
+                        模擬實驗2</a>
                     </li>
                 </ul>
             </div>
